5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/3094/executions/1758_1576.log
== TEST (2019-05-28 15:50:47) 
-- CODE:
from numpy import *
n1 = array(eval(input('Eusápia: ')))
n2 = array(eval(input('Barsanulfo: ')))

pedra=11
papel=22
tesoura=33

print(size(n1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 15:51:50) 
-- CODE:
from numpy import *
n1 = array(eval(input('Eusápia: ')))
#n2 = array(eval(input('Barsanulfo: ')))

pedra=11
papel=22
tesoura=33

print(size(n1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 15:52:14) 
-- CODE:
from numpy import *
n1 = array((input('Eusápia: '))
#n2 = array(eval(input('Barsanulfo: ')))

pedra=11
papel=22
tesoura=33

print(size(n1))
-- ERROR:
File "XXXX", line 5
    pedra=11
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 15:52:34) 
-- CODE:
from numpy import *
n1 = array((input('Eusápia: '))
#n2 = array(eval(input('Barsanulfo: ')))

#pedra=11
#papel=22
#tesoura=33

print(size(n1))
-- ERROR:
File "XXXX", line 9
    print(size(n1))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 15:53:20) 
-- CODE:
from numpy import *
n1 = array(int(input('Eusápia: ')))
#n2 = array(eval(input('Barsanulfo: ')))

#pedra=11
#papel=22
#tesoura=33

print(size(n1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:49:57) 
-- CODE:
from numpy import *
n1 = array(int(input('Eusápia: ')))
n2 = array(int(input('Barsanulfo: ')))

print(size(n1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:50:51) 
-- CODE:
from numpy import *
n1 = array(int(input('Eusápia: ')))
n2 = array(int(input('Barsanulfo: ')))

print(size(n1))
print(size(n2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:52:35) 
-- CODE:
from numpy import *
n1 = array(int(input('Eusápia: ')))
n2 = array(int(input('Barsanulfo: ')))

print(n1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:56:04) 
-- CODE:
from numpy import *
n1 = int(input('Eusápia: '))
n2 = int(input('Barsanulfo: '))

print(size(n1))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:56:27) 
-- CODE:
from numpy import *

n1 = int(input('Eusápia: '))
n2 = int(input('Barsanulfo: '))

print((n1))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:56:46) 
-- CODE:
from numpy import *

n1 = int(input("Eusápia: "))
n2 = int(input("Barsanulfo: "))

print((n1))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:57:12) 
-- CODE:
from numpy import *

n1 = int(input("Eusapia: "))
n2 = int(input("Barsanulfo: "))

print((n1))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:57:29) 
-- CODE:
from numpy import *

n1 = int(input("Eusapia: "))
n2 = int(input("Barsanulfo: "))

print(size(n1))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:58:03) 
-- CODE:
from numpy import *

n1 = array(int(input("Eusapia: ")))
n2 = array(int(input("Barsanulfo: ")))

print(size(n1))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:59:34) 
-- CODE:
from numpy import *

n1 = array[int(input("Eusapia: "))]
n2 = array[int(input("Barsanulfo: "))]

print(size(n1))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:00:52) 
-- CODE:
from numpy import *

n1 = array(eval(input("Eusapia: ")))
n2 = array(eval(input("Barsanulfo: ")))

print(size(n1))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:48:12) 
-- CODE:
from numpy import *

n1 = array(eval(input("Eusapia: ")))
n2 = array(eval(input("Barsanulfo: ")))

print(size(n1))

i=0

while(i < len(n1)):
	if(n1=="11" and n2=='11' or n1=='22' and n2=='22' or n1=='33' and n2=='33'):
		print('EMPATE')
	elif(n1=='11' and n2=='33' or n1=='22' and n2=='11' or n1=='33' and n2=='22'):
		print('EUSAPIA')
	else:
		print('BARSANULFO')
		
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:48:50) 
-- CODE:
from numpy import *

n1 = array(eval(input("Eusapia: ")))
n2 = array(eval(input("Barsanulfo: ")))

print(size(n1))

i=0

while(i < len(n1)):
	if(n1=="11" and n2=='11' or n1=='22' and n2=='22' or n1=='33' and n2=='33'):
		print('EMPATE')
	elif(n1=='11' and n2=='33' or n1=='22' and n2=='11' or n1=='33' and n2=='22'):
		print('EUSAPIA')
	else:
		print('BARSANULFO')
		
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:50:47) 
-- CODE:
from numpy import *

n1 = array(eval(input("Eusapia: ")))
n2 = array(eval(input("Barsanulfo: ")))

print(size(n1))

i=0

while(i < len(n1)):
	if(n1=="11" and n2=='11' or n1=='22' and n2=='22' or n1=='33' and n2=='33'):
		print('EMPATE')
	elif(n1=='11' and n2=='33' or n1=='22' and n2=='11' or n1=='33' and n2=='22'):
		print('EUSAPIA')
	else:
		print('BARSANULFO')
	i=i+1		
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:51:09) 
-- CODE:
from numpy import *

n1 = array(eval(input("Eusapia: ")))
n2 = array(eval(input("Barsanulfo: ")))

print(size(n1))

i=0

while(i < len(n1)):
	if(n1=="11" and n2=='11' or n1=='22' and n2=='22' or n1=='33' and n2=='33'):
		print('EMPATE')
	elif(n1=='11' and n2=='33' or n1=='22' and n2=='11' or n1=='33' and n2=='22'):
		print('EUSAPIA')
	else:
		print('BARSANULFO')
	i=i+1		
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:15:08) 
-- CODE:
from numpy import *

v0 = array(eval(input("Eusapia: ")))
v1 = array(eval(input("Barsanulfo: ")))

i=0
j=0
k=0

while(i < size(v0) and size(v0)==size(v1)):
	if(v0[i]=="11" and v1[i]=='33' or v0[i]=='22' and v1[i]=='11' or v1[i]=='33' and v1[i]=='22'):
		i=i+j
		j=j+i
	elif(v1[i]=='11' and v0[i]=='33' or v0[i]=='22' and v1[i]=='11' or v0[i]=='33' and v1[i]=='22'):
		i=1+i
		k=k+1
	else:
		i=i+1
print(i)
if(j>k):
	print("EUSAPIA")
elif(k>j):
	print('BARSANULFO')
else:
	print('EMPATE')
		
		
		
		
		
		
		
-- EXECUTION TIME:
0.449701
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EMPATE
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EMPATE
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:17:14) 
-- CODE:
from numpy import *

v0 = array(eval(input("Eusapia: ")))
v1 = array(eval(input("Barsanulfo: ")))

i=0
j=0
k=0

while(i < size(v0) and size(v0)==size(v1)):
	if((v0[i]=="11" and v1[i]=='33') or (v0[i]=='22' and v1[i]=='11') or (v1[i]=='33' and v1[i]=='22')):
		i=i+j
		j=j+i
	elif((v1[i]=='11' and v0[i]=='33') or (v0[i]=='22' and v1[i]=='11') or (v0[i]=='33' and v1[i]=='22')):
		i=1+i
		k=k+1
	else:
		i=i+1
print(i)
if(j>k):
	print("EUSAPIA")
elif(k>j):
	print('BARSANULFO')
else:
	print('EMPATE')
		
		
		
		
		
		
		
-- EXECUTION TIME:
0.409489
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EMPATE
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EMPATE
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:18:24) 
-- CODE:
from numpy import *

v0 = array(eval(input("Eusapia: ")))
v1 = array(eval(input("Barsanulfo: ")))

i=0
j=0
k=0

while(i < size(v0) and size(v0)==size(v1)):
	if((v0[i]=="11" and v1[i]=='33') or (v0[i]=='22' and v1[i]=='11') or (v1[i]=='33' and v1[i]=='22')):
		i=i+1
		j=j+i
	elif((v1[i]=='11' and v0[i]=='33') or (v0[i]=='22' and v1[i]=='11') or (v0[i]=='33' and v1[i]=='22')):
		i=i+1
		k=k+1
	else:
		i=i+1
print(i)
if(j>k):
	print("EUSAPIA")
elif(k>j):
	print('BARSANULFO')
else:
	print('EMPATE')
		
		
		
		
		
		
		
-- EXECUTION TIME:
0.45346
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EMPATE
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EMPATE
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:18:33) 
-- CODE:
from numpy import *

v0 = array(eval(input("Eusapia: ")))
v1 = array(eval(input("Barsanulfo: ")))

i=0
j=0
k=0

while(i < size(v0) and size(v0)==size(v1)):
	if((v0[i]=="11" and v1[i]=='33') or (v0[i]=='22' and v1[i]=='11') or (v1[i]=='33' and v1[i]=='22')):
		i=i+1
		j=j+i
	elif((v1[i]=='11' and v0[i]=='33') or (v0[i]=='22' and v1[i]=='11') or (v0[i]=='33' and v1[i]=='22')):
		i=i+1
		k=k+1
	else:
		i=i+1
print(i)
if(j>k):
	print("EUSAPIA")
elif(k>j):
	print('BARSANULFO')
else:
	print('EMPATE')
		
		
		
		
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:18:48) 
-- CODE:
from numpy import *

v0 = array(eval(input("Eusapia: ")))
v1 = array(eval(input("Barsanulfo: ")))

i=0
j=0
k=0

while(i < size(v0) and size(v0)==size(v1)):
	if((v0[i]=="11" and v1[i]=='33') or (v0[i]=='22' and v1[i]=='11') or (v1[i]=='33' and v1[i]=='22')):
		i=i+1
		j=j+i
	elif((v1[i]=='11' and v0[i]=='33') or (v0[i]=='22' and v1[i]=='11') or (v0[i]=='33' and v1[i]=='22')):
		i=i+1
		k=k+1
	else:
		i=i+1
print(i)
if(j>k):
	print("EUSAPIA")
elif(k>j):
	print('BARSANULFO')
else:
	print('EMPATE')
		
		
		
		
		
		
		
-- EXECUTION TIME:
0.431412
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EMPATE
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EMPATE
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:19:11) 
-- CODE:
from numpy import *

v0 = array(eval(input("Eusapia: ")))
v1 = array(eval(input("Barsanulfo: ")))

i=0
j=0
k=0

while(i < size(v0) and size(v0)==size(v1)):
	if((v0[i]=="11" and v1[i]=='33') or (v0[i]=='22' and v1[i]=='11') or (v1[i]=='33' and v1[i]=='22')):
		i=i+1
		j=j+i
	elif((v1[i]=='11' and v0[i]=='33') or (v0[i]=='22' and v1[i]=='11') or (v0[i]=='33' and v1[i]=='22')):
		i=i+1
		k=k+1
	else:
		i=i+1
print(i)
if(j>k):
	print("EUSAPIA")
elif(k>j):
	print("BARSANULFO')
else:
	print('EMPATE')
		
		
		
		
		
		
		
-- EXECUTION TIME:
0.115457
-- ERROR:
  File "/home/codebench/codes/1758/1576/main.py", line 23
    print("BARSANULFO')
                      ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:19:18) 
-- CODE:
from numpy import *

v0 = array(eval(input("Eusapia: ")))
v1 = array(eval(input("Barsanulfo: ")))

i=0
j=0
k=0

while(i < size(v0) and size(v0)==size(v1)):
	if((v0[i]=="11" and v1[i]=='33') or (v0[i]=='22' and v1[i]=='11') or (v1[i]=='33' and v1[i]=='22')):
		i=i+1
		j=j+i
	elif((v1[i]=='11' and v0[i]=='33') or (v0[i]=='22' and v1[i]=='11') or (v0[i]=='33' and v1[i]=='22')):
		i=i+1
		k=k+1
	else:
		i=i+1
print(i)
if(j>k):
	print("EUSAPIA")
elif(k>j):
	print("BARSANULFO")
else:
	print('EMPATE')
		
		
		
		
		
		
		
-- EXECUTION TIME:
0.48867
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EMPATE
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EMPATE
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:20:40) 
-- CODE:
from numpy import *

v0 = array(eval(input("Eusapia: ")))
v1 = array(eval(input("Barsanulfo: ")))

i=0
j=0
k=0

while(i < size(v0) and size(v0)==size(v1)):
	if((v0[i]==11 and v1[i]==33) or (v0[i]==22 and v1[i]==11) or (v1[i]== 33  and v1[i]== 22 )):
		i=i+1
		j=j+i
	elif((v1[i]==11 and v0[i]==33) or (v0[i]==22 and v1[i]==11) or (v0[i]==33 and v1[i]==22)):
		i=i+1
		k=k+1
	else:
		i=i+1
print(i)
if(j>k):
	print("EUSAPIA")
elif(k>j):
	print("BARSANULFO")
else:
	print("EMPATE")
		
		
		
		
		
		
		
-- EXECUTION TIME:
0.528867
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EUSAPIA
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EUSAPIA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 01:07:06) 
-- CODE:
from numpy import *

v0 = array(eval(input("Eusapia: ")))
v1 = array(eval(input("Barsanulfo: ")))

i=0
j=0
k=0

while(i < size(v0) and size(v0) == size(v1)):
	if((v0[i] == 11 and v1[i] == 33) or (v0[i] == 22 and v1[i] == 11) or (v0[i] == 33  and v1[i]== 22 )):
		i=i+1
		j=j+i
	elif((v1[i] == 11 and v0[i] == 33) or (v1[i] == 22 and v0[i] == 11) or (v1[i] == 33 and v0[i] == 22)):
		i = i + 1
		k = k + 1
	else:
		i = i + 1
print(i)
if(j>k):
	print("EUSAPIA")
elif(k>j):
	print("BARSANULFO")
else:
	print("EMPATE")
		
		
		
		
		
		
		
-- EXECUTION TIME:
4.48614
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
Eusapia: Barsanulfo: 12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
Eusapia: Barsanulfo: 10
EUSAPIA
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
Eusapia: Barsanulfo: 18
EUSAPIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 01:08:14) 
-- CODE:
from numpy import *

v0 = array(eval(input("Eusapia: ")))
v1 = array(eval(input("Barsanulfo: ")))

i=0
j=0
k=0

while(i < size(v0) and size(v0) == size(v1)):
	if((v0[i] == 11 and v1[i] == 33) or (v0[i] == 22 and v1[i] == 11) or (v0[i] == 33  and v1[i]== 22 )):
		i = i + 1
		j = j + i
	elif((v1[i] == 11 and v0[i] == 33) or (v1[i] == 22 and v0[i] == 11) or (v1[i] == 33 and v0[i] == 22)):
		i = i + 1
		k = k + 1
	else:
		i = i + 1
print(i)
if(j > k):
	print("EUSAPIA")
elif(k > j):
	print("BARSANULFO")
else:
	print("EMPATE")
		
		
		
		
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 01:08:25) 
-- CODE:
from numpy import *

v0 = array(eval(input("Eusapia: ")))
v1 = array(eval(input("Barsanulfo: ")))

i=0
j=0
k=0

while(i < size(v0) and size(v0) == size(v1)):
	if((v0[i] == 11 and v1[i] == 33) or (v0[i] == 22 and v1[i] == 11) or (v0[i] == 33  and v1[i]== 22 )):
		i = i + 1
		j = j + i
	elif((v1[i] == 11 and v0[i] == 33) or (v1[i] == 22 and v0[i] == 11) or (v1[i] == 33 and v0[i] == 22)):
		i = i + 1
		k = k + 1
	else:
		i = i + 1
print(i)
if(j > k):
	print("EUSAPIA")
elif(k > j):
	print("BARSANULFO")
else:
	print("EMPATE")
		
		
		
		
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 01:08:34) 
-- CODE:
from numpy import *

v0 = array(eval(input("Eusapia: ")))
v1 = array(eval(input("Barsanulfo: ")))

i=0
j=0
k=0

while(i < size(v0) and size(v0) == size(v1)):
	if((v0[i] == 11 and v1[i] == 33) or (v0[i] == 22 and v1[i] == 11) or (v0[i] == 33  and v1[i]== 22 )):
		i = i + 1
		j = j + i
	elif((v1[i] == 11 and v0[i] == 33) or (v1[i] == 22 and v0[i] == 11) or (v1[i] == 33 and v0[i] == 22)):
		i = i + 1
		k = k + 1
	else:
		i = i + 1
print(i)
if(j > k):
	print("EUSAPIA")
elif(k > j):
	print("BARSANULFO")
else:
	print("EMPATE")
		
		
		
		
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 01:08:48) 
-- CODE:
from numpy import *

v0 = array(eval(input("Eusapia: ")))
v1 = array(eval(input("Barsanulfo: ")))

i=0
j=0
k=0

while(i < size(v0) and size(v0) == size(v1)):
	if((v0[i] == 11 and v1[i] == 33) or (v0[i] == 22 and v1[i] == 11) or (v0[i] == 33  and v1[i]== 22 )):
		i = i + 1
		j = j + i
	elif((v1[i] == 11 and v0[i] == 33) or (v1[i] == 22 and v0[i] == 11) or (v1[i] == 33 and v0[i] == 22)):
		i = i + 1
		k = k + 1
	else:
		i = i + 1
print(i)
if(j > k):
	print("EUSAPIA")
elif(k > j):
	print("BARSANULFO")
else:
	print("EMPATE")
		
		
		
		
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 01:08:56) 
-- CODE:
from numpy import *

v0 = array(eval(input("Eusapia: ")))
v1 = array(eval(input("Barsanulfo: ")))

i=0
j=0
k=0

while(i < size(v0) and size(v0) == size(v1)):
	if((v0[i] == 11 and v1[i] == 33) or (v0[i] == 22 and v1[i] == 11) or (v0[i] == 33  and v1[i]== 22 )):
		i = i + 1
		j = j + i
	elif((v1[i] == 11 and v0[i] == 33) or (v1[i] == 22 and v0[i] == 11) or (v1[i] == 33 and v0[i] == 22)):
		i = i + 1
		k = k + 1
	else:
		i = i + 1
print(i)
if(j > k):
	print("EUSAPIA")
elif(k > j):
	print("BARSANULFO")
else:
	print("EMPATE")
		
		
		
		
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 01:09:34) 
-- CODE:
from numpy import *

v0 = array(eval(input("Eusapia: ")))
v1 = array(eval(input("Barsanulfo: ")))

i=0
j=0
k=0

while(i < size(v0) and size(v0) == size(v1)):
	if((v0[i] == 11 and v1[i] == 33) or (v0[i] == 22 and v1[i] == 11) or (v0[i] == 33  and v1[i]== 22 )):
		i = i + 1
		j = j + i
	elif((v1[i] == 11 and v0[i] == 33) or (v1[i] == 22 and v0[i] == 11) or (v1[i] == 33 and v0[i] == 22)):
		i = i + 1
		k = k + 1
	else:
		i = i + 1
print(i)
if(j > k):
	print("EUSAPIA")
elif(k > j):
	print("BARSANULFO")
else:
	print("EMPATE")
		
		
		
		
		
		
		
-- EXECUTION TIME:
6.93215
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EUSAPIA
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
EUSAPIA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 01:23:33) 
-- CODE:
from numpy import *

v0 = array(eval(input("Eusapia: ")))
v1 = array(eval(input("Barsanulfo: ")))

i=0
j=0
k=0

while(i < size(v0) and size(v0) == size(v1)):
	if((v0[i] == 11 and v1[i] == 33) or (v0[i] == 22 and v1[i] == 11) or (v0[i] == 33  and v1[i]== 22 )):
		i = i + 1
		j = j + 1
	elif((v1[i] == 11 and v0[i] == 33) or (v1[i] == 22 and v0[i] == 11) or (v1[i] == 33 and v0[i] == 22)):
		i = i + 1
		k = k + 1
	else:
		i = i + 1
print(i)
if(j > k):
	print("EUSAPIA")
elif(k > j):
	print("BARSANULFO")
else:
	print("EMPATE")
		
		
		
		
		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 01:23:33) 
-- CODE:
from numpy import *

v0 = array(eval(input("Eusapia: ")))
v1 = array(eval(input("Barsanulfo: ")))

i=0
j=0
k=0

while(i < size(v0) and size(v0) == size(v1)):
	if((v0[i] == 11 and v1[i] == 33) or (v0[i] == 22 and v1[i] == 11) or (v0[i] == 33  and v1[i]== 22 )):
		i = i + 1
		j = j + 1
	elif((v1[i] == 11 and v0[i] == 33) or (v1[i] == 22 and v0[i] == 11) or (v1[i] == 33 and v0[i] == 22)):
		i = i + 1
		k = k + 1
	else:
		i = i + 1
print(i)
if(j > k):
	print("EUSAPIA")
elif(k > j):
	print("BARSANULFO")
else:
	print("EMPATE")
		
		
		
		
		
		
		
-- EXECUTION TIME:
2.661
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
